fix off-body whitespace issue

--- a/src/App.css
+++ b/src/App.css
@@ -28,16 +28,15 @@
     --txt-4: Montserrat;
     --carousel-padding: 4rem;
 }
+html {
+    overflow-x: hidden;
+}
 body {
     background: var(--bg-clr-1);
     font-family: var(--txt-2);
     margin: 0;
     overflow-x: hidden;
     scroll-behavior: smooth;
-}
-#root {
-    height: max-content;
-    overflow: visible;
 }
 #parallax {
     background: linear-gradient(-.64turn, var(--accent-clr-2), var(--accent-clr-5), var(--accent-clr-3));
